jaeger/jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeager-ingress
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jeager.158.23.246.19.nip.io
    http:
      paths:
      - backend:
          service:
            name: jaeger-srv-query
            port:
              number: 16686
        path: /
        pathType: Prefix
  ingressClassName: nginx
